# SumAreaTableRocm

./: .gitignore  CMakeLists.txt  README.md
include/: hipErrorCheck.hpp  satHip.hpp
src/: satHip.hip
